src/objects/WaiveUnBilledNRCOption__mdt.object
<CustomObject>
    <fields>
        <fullName>IsDefault__c</fullName>
        <label>IsDefault</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LanguageCode__c</fullName>
        <label>LanguageCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>waiveUnBilledNRC__c</fullName>
        <label>waiveUnBilledNRC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Waive UnBilled NRC Option</label>
    <pluralLabel>Waive UnBilled NRC Options</pluralLabel>
</CustomObject>